added validation in JS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
 </head>
 <body>
 
-<button type="button" class="btn btn-primary">Primary</button>
+<main class="login">
+  <div class="panel">
+    <form>
+      <div class="mb-3">
+        <label for="exampleInputEmail1"  class="form-label">Email address</label>
+        <input type="email" class="form-control" tabindex="1" autofocus id="exampleInputEmail1" required aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1"  class="form-label">Password</label>
+        <input type="password" class="form-control" tabindex="2" id="exampleInputPassword1" required>
+      </div>
+      <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" tabindex="3" id="exampleCheck1" required>
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+      </div>
+      <button type="submit" class="btn btn-primary" tabindex="4">Submit</button>
+    </form>
+  </div>
+</main>
+<script src="js/main.js"></script>
 </body>
 </html>
